refactor: Another metric fuck ton of cleanup and some fixes between.